@@ -20,6 +20,7 @@ namespace gameswf
 	// sprite built-in ActionScript methods
 	//
 
+	void	sprite_hit_test(const fn_call& fn);
 	void	sprite_play(const fn_call& fn);
 	void	sprite_stop(const fn_call& fn);
 	void	sprite_goto_and_play(const fn_call& fn);
