@@ -218,6 +218,8 @@ namespace gameswf
 		virtual void	on_event_load_progress();
 		virtual const char*	call_method_args(const char* method_name, const char* method_arg_fmt, va_list args);
 		virtual void	attach_display_callback(const char* path_to_object, void (*callback)(void*), void* user_ptr);
+		bool	hit_test(character* target);
+
 	};
 }
 
